[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
color-eyre = "0.6.3"
deadpool-postgres = "0.14.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_postgres = "0.2.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = { version = "0.7.11", features = ["with-serde_json-1"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
