[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.16", features = ["derive"] }
color-eyre = "0.6.3"
deadpool-postgres = "0.14.0"
deadpool-redis = "0.16.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
opentelemetry = "0.24.0"
redis = { version = "0.26.1", features = ["tokio-comp"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_postgres = "0.2.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = { version = "0.7.11", features = ["with-serde_json-1"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.18.1", features = ["derive"] }
